[gd_scene load_steps=6 format=3 uid="uid://u7s6mhky7v7u"]

[ext_resource type="Script" path="res://ui/hud_enemy_view.gd" id="1_21h6e"]
[ext_resource type="PackedScene" uid="uid://djdh7mp64thdi" path="res://ui/hud_status_display.tscn" id="2_u0m5l"]
[ext_resource type="PackedScene" uid="uid://dhoqr0ca7h26x" path="res://ui/hud_relic_display.tscn" id="3_ciq6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2xvb"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbhag"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[node name="HudEnemyView" type="PanelContainer"]
offset_right = 167.0
offset_bottom = 66.0
script = ExtResource("1_21h6e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Character Id + Name"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_o2xvb")
theme_override_styles/fill = SubResource("StyleBoxFlat_lbhag")
value = 50.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -11.5
offset_right = 21.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "10/20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Idle"

[node name="ViewLogButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Log"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 2

[node name="HudStatusDisplay" parent="MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource("2_u0m5l")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 2

[node name="HudRelicDisplay" parent="MarginContainer/VBoxContainer/MarginContainer2" instance=ExtResource("3_ciq6f")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ViewLogButton" to="." method="_on_view_log_button_pressed"]
